--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   velocity_x: ^4.3.1
   get: ^4.7.2
+  iconsax: ^0.0.8
+  toastification: ^3.0.3
+  firebase_core: ^4.1.1
+  firebase_analytics: ^12.0.2
+  firebase_auth: ^6.1.0
+  firebase_storage: ^13.0.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
