--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_auth: ^6.1.0
   firebase_storage: ^13.0.2
   image_picker: ^1.2.0
+  cloud_firestore: ^6.0.2
+  firebase_app_check: ^0.4.1
 
 dev_dependencies:
   flutter_test:
