--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   image_picker: ^1.2.0
   cloud_firestore: ^6.0.2
   firebase_app_check: ^0.4.1
+  razorpay_flutter: ^1.4.0
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
