--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_app_check: ^0.4.1
   razorpay_flutter: ^1.4.0
   smooth_page_indicator: ^1.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
